--- a/Pipfile
+++ b/Pipfile
@@ -18,7 +18,11 @@ marshmallow-sqlalchemy = "1.0.0"
 sqlalchemy = '*'
 sqlalchemy-serializer = "1.4.12"
 Werkzeug = "*"
+cryptography = "*"
+requests = "*"
+flask-jwt-extended = "*"
 DateTime = "5.5"
 
 [requires]
+python_version = "3.8"
 python_full_version = "3.8.13"
