--- a/Pipfile
+++ b/Pipfile
@@ -22,6 +22,7 @@ cryptography = "*"
 requests = "*"
 flask-jwt-extended = "*"
 DateTime = "5.5"
+flask-redis = "*"
 
 [requires]
 python_version = "3.8"
