--- a/Pipfile
+++ b/Pipfile
@@ -22,7 +22,7 @@ cryptography = "*"
 requests = "*"
 flask-jwt-extended = "*"
 DateTime = "5.5"
-flask-redis = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.8"
