oauth works on frontend

--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,7 @@ requests = "*"
 flask-jwt-extended = "*"
 DateTime = "5.5"
 python-dotenv = "*"
+google-auth = "*"
 
 [requires]
 python_version = "3.8"
