--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "proxy": "http://localhost:5555/api/v1",
   "dependencies": {
+    "@react-oauth/google": "^0.12.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,7 +19,10 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "crypto-browserify": "^3.12.0",
     "formik": "^2.4.5",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
     "sass": "^1.74.1"
   },
   "scripts": {
