--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "crypto-browserify": "^3.12.0",
     "formik": "^2.4.5",
+    "jsonwebtoken": "^9.0.2",
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "sass": "^1.74.1"
