--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,8 @@ flask-jwt-extended = "*"
 DateTime = "5.5"
 python-dotenv = "*"
 google-auth = "*"
+gunicorn = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.8"
